feat: expand administrative user management
